--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@welldone-software/why-did-you-render": "^6.1.1",
     "date-fns": "^2.21.1",
     "firebase": "^8.4.1",
     "react": "^17.0.2",
