--- a/src/README.yaml
+++ b/src/README.yaml
@@ -1,37 +1,37 @@
-//LINTING//
-// eslint-disable-next-line react-hooks/exhaustive-deps
+*LINTING*
+* eslint-disable-next-line react-hooks/exhaustive-deps
   Added to
     src\components\profile\index.js
     src\components\sidebar\suggestions.js
     src\hooks\use-photos.js
 
 TODO
-// Add skeleton loading for user profile icon in nav bar
-// include individual user photo browsing functinoality with Modals
-// integrate real time messaging
-// integrate an explore function using the suggestions API
-// integrate a notification feed 
-// integrate functionality where if comments > 3 then hide additional comments
-// implement upload functionality
-// implement 50projects50days-master\double-click-heart on posts
-// implement 50projects50days-master\drawing-app into messaging
-// implement 50projects50days-master\drag-n-drop into profile page
-// implement 50projects50days-master\image-carousel\index.html as an OPTION for timeline viewing
-// implement OPTION pagination or scrolling for comment viewing on 'single-post-viewer'
-// implement 50projects50days-master\mobile-tab-navigation on loggedinuser profile page to view saved, and @taggedLoggedInUser
-//implement live search on inserting '@' in comment bar 
-// implement 50projects50days-master\password-strength-background
-// implement subscription to notifications
-// integrate 50projects50days-master\toast-notification when notifications happen
-// implement ability for LoggedInUser to change password
-// integrate 50projects50days-master\verify-account-ui as mobile verification for password change
+* Add skeleton loading for user profile icon in nav bar
+* include individual user photo browsing functinoality with Modals
+* integrate real time messaging
+* integrate an explore function using the suggestions API
+* integrate a notification feed 
+* integrate functionality where if comments > 3 then hide additional comments
+* implement upload functionality
+* implement 50projects50days-master\double-click-heart on posts
+* implement 50projects50days-master\drawing-app into messaging
+* implement 50projects50days-master\drag-n-drop into profile page
+* implement 50projects50days-master\image-carousel\index.html as an OPTION for timeline viewing
+* implement OPTION pagination or scrolling for comment viewing on 'single-post-viewer'
+* implement 50projects50days-master\mobile-tab-navigation on loggedinuser profile page to view saved, and @taggedLoggedInUser
+*implement live search on inserting '@' in comment bar 
+* implement 50projects50days-master\password-strength-background
+* implement subscription to notifications
+* integrate 50projects50days-master\toast-notification when notifications happen
+* implement ability for LoggedInUser to change password
+* integrate 50projects50days-master\verify-account-ui as mobile verification for password change
 
 REFACTOR
-//src\components\timeline.js logic can be implemented into hook
+*src\components\timeline.js logic can be implemented into hook
 
 
-//follower and following modal
-//Planned format of upload modal 
+*follower and following modal
+*Planned format of upload modal 
 Upload! -- esc
 OPTION[tab format]::: Add a new Photo Change Avatar
 add a caption
