--- a/src/README.yaml
+++ b/src/README.yaml
@@ -34,12 +34,13 @@ TODO
 * implement 50projects50days-master\image-carousel\index.html as an OPTION for timeline viewing
 * implement OPTION pagination or scrolling for comment viewing on 'single-post-viewer'
 * implement 50projects50days-master\mobile-tab-navigation on loggedinuser profile page to view saved, and @taggedLoggedInUser
-*implement live search on inserting '@' in comment bar 
+* implement live search on inserting '@' in comment bar 
 * implement 50projects50days-master\password-strength-background
 * implement subscription to notifications
 * integrate 50projects50days-master\toast-notification when notifications happen
 * implement ability for LoggedInUser to change password
 * integrate 50projects50days-master\verify-account-ui as mobile verification for password change
+* run a cleaning function that removes deleted user account from the arrays in user objects
 
 REFACTOR
 *src\components\timeline.js logic can be implemented into hook
